@@ -151,7 +151,7 @@ When working with more than one file, if condition and/or verifyproperty is used
 the result will be true only if the checksums matched correctly for all files being
 considered.
 
-<hr><p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights
+<hr><p align="center">Copyright &copy; 2001-2002 Apache Software Foundation. All rights
 Reserved.</p>
 
 </body>
